--- a/xcconfigs/Global.xcconfig
+++ b/xcconfigs/Global.xcconfig
@@ -5,11 +5,14 @@
 //  Created by Duy Tran on 2025/5/24.
 //
 
-DEVELOPMENT_TEAM[config=Debug] = AAAAA11111
-DEVELOPMENT_TEAM[config=Release] = AAAAA11111
+DEVELOPMENT_TEAM[config=Debug] = AL869FRMV6
+DEVELOPMENT_TEAM[config=Release] = AL869FRMV6
 
 DEVELOPMENT_TEAM_SUFFIX[config=Debug] = .$(DEVELOPMENT_TEAM)
-DEVELOPMENT_TEAM_SUFFIX[config=Release] =
+DEVELOPMENT_TEAM_SUFFIX[config=Release] = .$(DEVELOPMENT_TEAM)
+
+// Force Development signing even for Release to allow running on device
+CODE_SIGN_IDENTITY[config=Release] = Apple Development
 
 APP_GROUP_SIDESTORE = group.com.SideStore.SideStore$(DEVELOPMENT_TEAM_SUFFIX)
 APP_GROUP_ALTSTORE = group.com.rileytestut.AltStore$(DEVELOPMENT_TEAM_SUFFIX)
